--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
     
+	height: 100%;
     margin: 0;
     padding: 0
+	
     
 }
 h1 {
     
     font-size: 70px;
-    color: #333;
+    color: red;
     text-align: center;
     margin-top: 250px;
 }
